overflow view fix

--- a/page.scss
+++ b/page.scss
@@ -26,7 +26,6 @@ body {
 
 header {
   color: $custom-white;
-  width: 100vw;
   position: sticky;
   top: 0;
   z-index: 2;
